--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -18,7 +18,13 @@
     cursor: pointer;
     .logo {
       width: 80px;
-      transition: width 300ms ease-in-out;
+      transition: all 300ms ease-in-out;
+      position: relative;
+    }
+    &:hover {
+      .logo {
+        transform: scale(1.05) rotate(-5deg);
+      }
     }
     .MuiTypography-root {
       font-size: 60px;
