Add ItemCard, add test photos

--- a/src/pages/MainPage/MainPage.scss
+++ b/src/pages/MainPage/MainPage.scss
@@ -1,6 +1,9 @@
 .main-page {
   min-height: 100vh;
   .keyboards {
-    // margin-top: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+    justify-content: center;
   }
 }
