--- a/src/App.scss
+++ b/src/App.scss
@@ -2,11 +2,27 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+
+    &-track {
+      background-color: #262626;
+    }
+
+    &-thumb {
+      border-radius: 4px;
+      background-color: #ffffff80;
+    }
+  }
 }
 
 .app {
   min-height: 100vh;
   .page {
     padding-top: 192px;
+    min-height: inherit;
+    max-width: 1232px;
+    margin: 0 auto;
   }
 }
