--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,6 +1,6 @@
 .nav-bar {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   padding: 16px 32px;
   align-items: center;
   width: 100%;
@@ -10,15 +10,12 @@
   .title {
     gap: 16px;
     display: flex;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
     transition: all 300ms ease-in-out;
     align-items: center;
     cursor: pointer;
     .logo {
       width: 80px;
-      transition: all 200ms ease-in-out;
+      transition: all 300ms ease-in-out;
       position: relative;
     }
     &:hover {
@@ -31,10 +28,17 @@
       transition: font-size 300ms ease-in-out;
     }
   }
+  .search {
+    place-self: center;
+  }
+  .buttons {
+    place-self: center end;
+    display: flex;
+    gap: 8px;
+  }
   &.thin {
     .title {
-      left: 0;
-      transform: none;
+      gap: 8px;
       .logo {
         width: 36px;
       }
