--- a/src/components/ItemCard/ItemCard.scss
+++ b/src/components/ItemCard/ItemCard.scss
@@ -1,23 +1,12 @@
 .keyboard-card {
   display: flex;
-  width: 600px;
-  height: 240px;
+  flex-direction: column;
+  width: 320px;
   .img {
     width: 320px;
+    height: 240px;
   }
-  .body {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    .content {
-      display: flex;
-      flex-direction: column;
-      .description {
-        margin-top: 16px;
-      }
-    }
-    .buttons {
-      margin: auto 0 0 auto;
-    }
+  .price {
+    margin-right: auto;
   }
 }
