--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,47 +1,37 @@
 .nav-bar {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1.5fr 1fr;
   padding: 16px 32px;
-  align-items: center;
   width: 100%;
   position: fixed;
   z-index: 1;
   top: 0;
+  column-gap: 32px;
   .title {
     gap: 16px;
     display: flex;
-    transition: all 300ms ease-in-out;
     align-items: center;
+    place-self: center end;
     cursor: pointer;
     .logo {
-      width: 80px;
-      transition: all 300ms ease-in-out;
+      width: 56px;
+      transition: transform 150ms ease-in-out;
       position: relative;
     }
     &:hover {
       .logo {
-        transform: scale(1.05) rotate(-5deg);
+        transform: scale(1.05);
       }
-    }
-    .MuiTypography-root {
-      font-size: 60px;
-      transition: font-size 300ms ease-in-out;
     }
   }
   .buttons {
-    place-self: center end;
+    place-self: center start;
     display: flex;
     gap: 8px;
   }
-  &.thin {
-    .title {
-      gap: 8px;
-      .logo {
-        width: 36px;
-      }
-      .MuiTypography-root {
-        font-size: 34px;
-      }
-    }
+  .breadcrumb {
+    position: absolute;
+    right: 8px;
+    top: 96px;
   }
 }
