--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,11 +1,13 @@
 .search {
   place-self: center;
   display: flex;
-  margin-left: 40px;
   align-items: center;
-  width: 90%;
+  width: 100%;
+  max-width: 500px;
   .MuiTextField-root {
-    max-width: 100%;
-    flex-grow: 1;
+    width: 100%;
+  }
+  .button {
+    margin-left: -48px;
   }
 }
