--- a/src/App.scss
+++ b/src/App.scss
@@ -14,14 +14,16 @@
   }
 }
 
-.app {
-  min-height: 100vh;
-  .page {
-    padding-top: 88px;
-    min-height: inherit;
-    max-width: 1376px;
-    margin: 0 auto;
-  }
+html {
+  overflow: hidden;
+}
+
+.page {
+  height: calc(100vh - 88px);
+  // max-width: 1376px;
+  padding: 32px 0;
+  margin: 88px 0 0;
+  overflow: auto;
 }
 
 .MuiDialog-container .MuiPaper-root {
