--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -1,5 +1,8 @@
 .filter {
-  margin: 24px 32px 0;
+  position: absolute;
+  top: 104px;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   gap: 8px;
   flex-wrap: wrap;
