--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   &::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
     &-track {
       background-color: #262626;
     }
@@ -19,13 +20,15 @@ html {
 }
 
 .page {
-  height: calc(100vh - 88px);
-  padding: 80px 0;
-  margin: 88px 0 0;
+  height: calc(100vh - 80px);
+  padding: 32px 0;
+  margin: 80px 0 0;
   overflow: auto;
 }
 
 .MuiDialog-container .MuiPaper-root {
+  background-color: #222222;
+  background-image: none;
   .MuiTypography-root {
     text-align: center;
   }
