--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,12 +1,13 @@
 .nav-bar {
-  display: grid;
-  grid-template-columns: 1fr 1.5fr 1fr;
-  padding: 16px 32px;
+  display: flex;
+  justify-content: space-between;
+  padding: 16px 24px;
   width: 100%;
   position: fixed;
   z-index: 1;
   top: 0;
   column-gap: 32px;
+  height: 80px;
   .title {
     gap: 16px;
     display: flex;
@@ -14,7 +15,7 @@
     place-self: center end;
     cursor: pointer;
     .logo {
-      width: 56px;
+      width: 48px;
       transition: transform 200ms ease-in-out;
       position: relative;
     }
@@ -32,6 +33,6 @@
   .breadcrumb {
     position: absolute;
     left: 8px;
-    top: 90px;
+    top: 120px;
   }
 }
