--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import 'react-slideshow-image/dist/styles.css';
+
 * {
   padding: 0;
   margin: 0;
@@ -21,7 +23,7 @@ html {
 
 .page {
   height: calc(100vh - 80px);
-  padding: 32px 0;
+  padding-bottom: 32px;
   margin: 80px 0 0;
   overflow: auto;
 }
