--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,7 @@ html {
   padding-bottom: 32px;
   margin: 80px 0 0;
   overflow: auto;
+  scroll-behavior: smooth;
 }
 
 .MuiDialog-container .MuiPaper-root {
