--- a/src/pages/MainPage/MainPage.scss
+++ b/src/pages/MainPage/MainPage.scss
@@ -13,8 +13,20 @@
       padding: 32px;
       opacity: 0.9;
       height: 100%;
-      width: 500px;
+      width: 300px;
       top: 0;
+      .anchor {
+        rotate: -45deg;
+      }
+      > * {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+      * {
+        color: white;
+        text-decoration-color: #ffffff80;
+      }
     }
     .each-slide-effect > div {
       display: flex;
