--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,3 @@
-@import 'react-slideshow-image/dist/styles.css';
-
 * {
   padding: 0;
   margin: 0;
@@ -24,7 +22,7 @@ html {
 .page {
   height: calc(100vh - 80px);
   padding-bottom: 32px;
-  margin: 80px 0 0;
+  margin-top: 80px;
   overflow: auto;
   scroll-behavior: smooth;
 }
