--- a/src/pages/MainPage/MainPage.scss
+++ b/src/pages/MainPage/MainPage.scss
@@ -1,40 +1,12 @@
 .main-page {
   display: flex;
-  flex-direction: column;
-  gap: 64px;
-  .slide-wrapper {
-    position: relative;
-    > .nav {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      z-index: 1;
-      background: linear-gradient(to right, #161616, transparent);
-      padding: 32px;
-      opacity: 0.9;
-      height: 100%;
-      width: 300px;
-      top: 0;
-      .anchor {
-        rotate: -45deg;
-      }
-      > * {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-      }
-      * {
-        color: white;
-        text-decoration-color: #ffffff80;
-      }
-    }
-    .each-slide-effect > div {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-size: cover;
-      aspect-ratio: 4/3;
-      background-position: center;
-    }
+  justify-content: center;
+  padding-top: 32px;
+  .items {
+    gap: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 848px;
+    justify-content: center;
   }
 }
