--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -1,5 +1,7 @@
 .cart-page {
   display: flex;
-  justify-content: center;
-  gap: 32px;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+  padding-top: 32px;
 }
