--- a/src/pages/ConstructorPage/ConstructorPage.scss
+++ b/src/pages/ConstructorPage/ConstructorPage.scss
@@ -2,11 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  .component-list {
-    display: flex;
-    flex-direction: column;
+  .wrapper {
     margin-top: 64px;
-    width: 300px;
-    gap: 16px;
+    .component-list {
+      display: flex;
+      flex-direction: column;
+      width: 300px;
+      gap: 16px;
+    }
   }
 }
